--- a/index.html
+++ b/index.html
@@ -1324,8 +1324,8 @@
     </div>
     <script>
         // --- CONFIGURATION: REPLACE THESE WITH YOUR GOOGLE SHEET DETAILS ---
-        const GOOGLE_SHEET_ID = '1_YOUR_GOOGLE_SHEET_ID_HERE'; // <-- IMPORTANT: Replace this with your Google Sheet ID
-        const SHEET_NAME = 'SimsData'; // <-- IMPORTANT: Replace this with the exact name of your sheet (e.g., 'Sheet1', 'MySims')
+        const GOOGLE_SHEET_ID = '1717434376'; // <-- IMPORTANT: Replace this with your Google Sheet ID
+        const SHEET_NAME = 'SimBiography'; // <-- IMPORTANT: Replace this with the exact name of your sheet (e.g., 'Sheet1', 'MySims')
         // -------------------------------------------------------------------
 
         // Default data in case CSV loading fails or no CSV is provided
