--- a/index.html
+++ b/index.html
@@ -1324,8 +1324,8 @@
     </div>
     <script>
         // --- CONFIGURATION: REPLACE THESE WITH YOUR GOOGLE SHEET DETAILS ---
-        const GOOGLE_SHEET_ID = '1717434376'; // <-- IMPORTANT: Replace this with your Google Sheet ID
-        const SHEET_NAME = 'SimBiography'; // <-- IMPORTANT: Replace this with the exact name of your sheet (e.g., 'Sheet1', 'MySims')
+        const GOOGLE_SHEET_ID = 'e/2PACX-1vSs1l3tUbLZpKfZCUxSkdYYsRcneV_PsoF7yPLJ3YdZr_tsVSOo3qcH4idIjwmx-f4U7rMb7_nBDSuV'; // <-- IMPORTANT: Replace this with your Google Sheet ID
+        const SHEET_NAME = '522782907'; // <-- IMPORTANT: Replace this with the exact name of your sheet (e.g., 'Sheet1', 'MySims')
         // -------------------------------------------------------------------
 
         // Default data in case CSV loading fails or no CSV is provided
